<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.savan.cloud.Otp"
    android:background="#ff000000">

    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_margin="10dp" />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textViewOTP"
            android:id="@+id/textView1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#FFF"
            android:layout_above="@+id/textView2"
        />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            style="@style/timerText"
            android:id="@+id/textView2"
            android:gravity="center"
            android:layout_above="@+id/editText1"
            android:padding="20dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editText1"
            android:hint="@string/editTextOTP"
            android:gravity="center"
            android:background="#FFF"
            android:singleLine="true"
            android:textSize="20sp"
            android:enabled="true"
            android:padding="10dp"
            android:layout_above="@+id/anchor"
        />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCont"
            android:id="@+id/button1"
            android:background="#ff007050"
            android:textColor="#ff00e0a0"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/anchor" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewTimeOut"
        android:id="@+id/textView2"
        android:textColor="#ffffffff"
        android:textSize="20dp"
        android:gravity="center"
        android:padding="20dp"
        android:layout_below="@+id/button1"/>

</RelativeLayout>